--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 
 @theme {
   --font-main: var(--font-schibsted-grotesk);
+
+  /* Colours */
+  --color-dark: #090506; /* TODO: convert to oklch */
+  /* Supernova */
+  --color-supernova-400: oklch(86.33% 0.1758 89.84); /* #FFCB05 */
+  /* Bridal Heath */
+  --color-bridal-50: oklch(0.9773 0.0102 81.8); /* #FBF7F0 */
 }
 
 :root {
@@ -19,5 +26,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-main), Arial, Helvetica, sans-serif;
 }
