--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   --font-main: var(--font-schibsted-grotesk);
 
@@ -8,12 +10,24 @@
   /* Supernova */
   --color-supernova-400: oklch(86.33% 0.1758 89.84); /* #FFCB05 */
   /* Bridal Heath */
-  --color-bridal-50: oklch(0.9773 0.0102 81.8); /* #FBF7F0 */
+  --color-bridal-50: oklch(97.73% 0.0102 81.8); /* #FBF7F0 */
+  --color-bridal-700: oklch(53.55% 0.1025 50.31); /* #9c5a32 */
+  /* Mountain Mist */
+  --color-mountain-mist-200: #d0d0d1;
+  --color-mountain-mist-800: #444546;
+  --color-mountain-mist-950: #252527;
+  /* Gray */
+  --color-gray-500: #6b6d6f;
 }
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #090506;
+}
+
+html.dark {
+  --background: #090506; /* Dark background */
+  --foreground: #ffffff; /* Dark foreground */
 }
 
 /* @media (prefers-color-scheme: dark) { */
