--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,15 @@
   --color-gray-500: #6b6d6f;
 }
 
+@utility no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #090506;
