Add link to event

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
   --color-bridal-700: oklch(53.55% 0.1025 50.31); /* #9c5a32 */
   /* Mountain Mist */
   --color-mountain-mist-200: #d0d0d1;
+  --color-mountain-mist-400: #949598;
   --color-mountain-mist-800: #444546;
   --color-mountain-mist-950: #252527;
   /* Gray */
