Add newsletter preferences

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,17 @@
 
   /* Bridal Heath */
   --color-bridal-50: oklch(97.73% 0.0102 81.8); /* #FBF7F0 */
+  --color-bridal-100: #f6eede; /* #F9F3E6 */
+  --color-bridal-200: #ecdabc;
+  --color-bridal-300: #e0bf91;
+  --color-bridal-400: #d39f64;
+  --color-bridal-500: #c98746;
+  --color-bridal-600: #bb713b;
   --color-bridal-700: oklch(53.55% 0.1025 50.31); /* #9c5a32 */
+  --color-bridal-800: #7d482f;
+  --color-bridal-900: #663d28;
+  --color-bridal-950: #361e14;
+
   /* Mountain Mist */
   --color-mountain-mist-200: #d0d0d1;
   --color-mountain-mist-400: #949598;
@@ -30,6 +40,8 @@
   --color-mountain-mist-950: #252527;
   /* Gray */
   --color-gray-500: #6b6d6f;
+
+  --color-tangerine: #ff9567;
 
   --animate-loop-scroll: loop-scroll 50s linear infinite;
 
