Added male avatar as svg and Modal for person bio

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@
   /* Mountain Mist */
   --color-mountain-mist-200: #d0d0d1;
   --color-mountain-mist-400: #949598;
+  --color-mountain-mist-600: #5B5C5F;
   --color-mountain-mist-800: #444546;
   --color-mountain-mist-950: #252527;
   /* Gray */
