--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,8 @@
   --color-bridal-950: #361e14;
 
   /* Mountain Mist */
+  --color-mountain-mist-50: #F5F5F6;
+  --color-mountain-mist-100: #E6E6E7;
   --color-mountain-mist-200: #d0d0d1;
   --color-mountain-mist-400: #949598;
   --color-mountain-mist-600: #5B5C5F;
