--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,7 @@
   --color-mountain-mist-50: #f5f5f6;
   --color-mountain-mist-100: #e6e6e7;
   --color-mountain-mist-200: #d0d0d1;
+  --color-mountain-mist-300: #aeafb2;
   --color-mountain-mist-400: #949598;
   --color-mountain-mist-500: #6b6d6f;
   --color-mountain-mist-600: #5b5c5f;
