--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@
   --color-mountain-mist-300: #aeafb2;
   --color-mountain-mist-400: #949598;
   --color-mountain-mist-500: #6b6d6f;
+  --color-mountain-mist-700: #4e4f50;
   --color-mountain-mist-600: #5b5c5f;
   --color-mountain-mist-800: #444546;
   --color-mountain-mist-950: #252527;
